version/0.15/_sources/examples/simulator/ep-mechanics-simulator-fullheart.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\simulator\ep-mechanics-simulator-fullheart.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_simulator_ep-mechanics-simulator-fullheart.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_simulator_ep-mechanics-simulator-fullheart.py:


Run a full-heart EP mechanics simulation
----------------------------------------
This example shows how to consume a full-heart model and
set it up for a coupled electromechanical simulation.

.. GENERATED FROM PYTHON SOURCE LINES 31-40

.. warning::
   When using a standalone version of the DPF Server, you must accept the `license terms
   <https://dpf.docs.pyansys.com/version/stable/getting_started/licensing.html>`_. To
   accept these terms, you can set this environment variable:

   .. code-block:: python

       import os
       os.environ["ANSYS_DPF_ACCEPT_LA"] = "Y"

.. GENERATED FROM PYTHON SOURCE LINES 42-45

Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules.

.. GENERATED FROM PYTHON SOURCE LINES 45-57

.. code-block:: Python


    import os
    from pathlib import Path

    from pint import Quantity

    from ansys.health.heart.examples import get_preprocessed_fullheart
    import ansys.health.heart.models as models
    import ansys.health.heart.settings.material.ep_material_factory as ep_material_factory
    from ansys.health.heart.settings.material.material import ISO, Mat295
    from ansys.health.heart.simulator import DynaSettings, EPMechanicsSimulator








.. GENERATED FROM PYTHON SOURCE LINES 58-61

Set the required paths
~~~~~~~~~~~~~~~~~~~~~~
Set the working directory and path to the model.

.. GENERATED FROM PYTHON SOURCE LINES 61-68

.. code-block:: Python


    # Get the path to a preprocessed full-heart model.
    path_to_model, path_to_partinfo, _ = get_preprocessed_fullheart(resolution="2.0mm")

    # Set the working directory.
    workdir = Path.home() / "pyansys-heart" / "downloads" / "Rodero2021" / "01" / "FullHeart"








.. GENERATED FROM PYTHON SOURCE LINES 69-71

Load the full-heart model
~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 71-75

.. code-block:: Python


    # Load the full-heart model.
    model = models.HeartModel.load_model(path_to_model, path_to_partinfo, working_directory=workdir)








.. GENERATED FROM PYTHON SOURCE LINES 76-79

Instantiate the simulator
~~~~~~~~~~~~~~~~~~~~~~~~~
Instantiate the simulator and define settings.

.. GENERATED FROM PYTHON SOURCE LINES 81-85

.. note::
   The ``DynaSettings`` object supports several LS-DYNA versions and platforms,
   including ``smp``, ``intempi``, ``msmpi``, ``windows``, ``linux``, and ``wsl``.
   Choose the one that works for your setup.

.. GENERATED FROM PYTHON SOURCE LINES 85-104

.. code-block:: Python


    lsdyna_path = r"your_dyna_exe"
    dyna_settings = DynaSettings(
        lsdyna_path=lsdyna_path, dynatype="intelmpi", platform="windows", num_cpus=4
    )

    # Instantiate the simulator.
    simulator = EPMechanicsSimulator(
        model=model,
        dyna_settings=dyna_settings,
        simulation_directory=os.path.join(workdir, "ep-mechanics"),
    )

    # Load default simulation settings.
    simulator.settings.load_defaults()

    # Use the ReactionEikonal solver for the electrophysiology simulation.
    simulator.settings.electrophysiology.analysis.solvertype = "ReactionEikonal"








.. GENERATED FROM PYTHON SOURCE LINES 105-108

Compute the fiber orientation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Compute the fiber orientation on the entire model.

.. GENERATED FROM PYTHON SOURCE LINES 108-127

.. code-block:: Python


    # Import the appendage landmarks.
    from ansys.health.heart.pre.database_utils import right_atrium_appendage_landmarks

    # Get the right atrium appendage landmark of the first case of Rodero2021.
    right_atrium_appendage_coordinates = right_atrium_appendage_landmarks.get("Rodero2021").get(1)

    # Compute fiber orientation in the ventricles and atria.
    simulator.compute_fibers()
    simulator.compute_left_atrial_fiber()
    simulator.compute_right_atrial_fiber(appendage=right_atrium_appendage_coordinates)

    # Switch the atria to active.
    simulator.model.left_atrium.fiber = True
    simulator.model.left_atrium.active = True

    simulator.model.right_atrium.fiber = True
    simulator.model.right_atrium.active = True








.. GENERATED FROM PYTHON SOURCE LINES 128-130

Set up the simulation for the mechanical simulations
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 130-155

.. code-block:: Python


    # Extract elements around atrial caps and assign as a passive material.
    ring = simulator.model.create_atrial_stiff_ring(radius=5)

    # Assign a material that is stiffer than the surrounding material.
    stiff_iso = Mat295(rho=0.001, iso=ISO(itype=-1, beta=2, kappa=10, mu1=0.1, alpha1=2))
    ring.meca_material = stiff_iso

    # Assign the default EP material
    ring.ep_material = ep_material_factory.get_default_myocardium_material(
        simulator.settings.electrophysiology.analysis.solvertype
    )

    # plot the mesh
    simulator.model.plot_mesh()

    # Compute UHCs (Universal Heart Coordinates).
    simulator.compute_uhc()

    # Extract elements close to the valves and assign these a passive material.
    simulator.model.create_stiff_ventricle_base(stiff_material=stiff_iso)

    # Compute the stress-free configuration.
    simulator.compute_stress_free_configuration(overwrite=True)








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_ep-mechanics-simulator-fullheart_001.png
        :alt: ep mechanics simulator fullheart
        :srcset: /examples/simulator/images/sphx_glr_ep-mechanics-simulator-fullheart_001.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_ep-mechanics-simulator-fullheart_001.vtksz


.. image-sg:: /examples/simulator/images/sphx_glr_ep-mechanics-simulator-fullheart_002.png
   :alt: EDVPR
   :srcset: /examples/simulator/images/sphx_glr_ep-mechanics-simulator-fullheart_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ({'Simulation output time (ms)': [0.0, 100.0, 200.3564453125, 303.1483154296875, 429.639404296875, 543.003662109375, 643.2411499023438, 772.7926635742188, 852.2255249023438, 931.6583251953125, 1000.0], 'Convergence': {'max_error (mm)': np.float64(18.748950948986938), 'mean_error (mm)': np.float64(2.0711047139705325)}, 'Cavity volumes': {'Left ventricle cavity': {'imposed cavity pressure (mmHg)': 15.0, 'true end diastolic volume (mm3)': 120446.96049660804, 'simulated volumes (mm3)': [67250.16514952549, 73381.09103363697, 79740.72288449113, 86256.54616890854, 93779.18955236519, 100073.7008270846, 105125.42365106697, 111074.31962393521, 114441.19475084648, 117533.0671972173, 120157.27409538408], 'volume error (%)': 0.2405095155822641}, 'Right ventricle cavity': {'imposed cavity pressure (mmHg)': 8.0, 'true end diastolic volume (mm3)': 185648.4505311891, 'simulated volumes (mm3)': [60324.90829826989, 99784.86455553581, 127227.30690051317, 143935.50981307955, 159534.48014959367, 170850.79321316554, 179708.01745866679, 189738.42804925493, 195359.0883939247, 200638.05507070667, 204927.40295785706], 'volume error (%)': -10.384655714338475}, 'Left atrium cavity': {'imposed cavity pressure (mmHg)': 15.0, 'true end diastolic volume (mm3)': 68001.90309648328, 'simulated volumes (mm3)': [6063.992035893494, 18683.889791736667, 36041.86296078672, 54502.10436453705, 66136.42399876475, 73992.14638868172, 80533.859172877, 87082.11881984303, 90993.93809862275, 94445.6507546565, 97253.94778406346], 'volume error (%)': -43.01650888516524}, 'Right atrium cavity': {'imposed cavity pressure (mmHg)': 15.0, 'true end diastolic volume (mm3)': 110948.18865153291, 'simulated volumes (mm3)': [49726.36311659627, 61634.12201604304, 71347.64382190286, 79622.78944030039, 87775.07036432775, 93714.51784961252, 98378.22157653052, 103632.7940235994, 106614.90406443397, 109401.45203669684, 111696.06608906866], 'volume error (%)': -0.6740780959342081}}}, DPFArray([[101.54945374,  50.11022949,  10.99630642],
              [103.3175354 ,  50.11639404,  12.44313717],
              [102.3127594 ,  49.20116425,  14.19369888],
              ...,
              [ 37.00266266,  55.93001175,  50.06879044],
              [ 14.7376585 ,  59.82291794,  31.48579025],
              [ 18.41151237,  62.61434937,  95.19060516]], shape=(72171, 3)), DPFArray([[112.53088379,  40.53034973,   5.68274593],
              [114.26644897,  40.59529495,   7.2369566 ],
              [112.36664581,  39.86889648,   8.13905621],
              ...,
              [ 41.99570465,  51.40354919,  45.42599487],
              [ 15.73549747,  55.09887695,  25.54956627],
              [ 18.41151237,  62.61434937,  95.19060516]], shape=(72171, 3)))



.. GENERATED FROM PYTHON SOURCE LINES 156-163

.. note::
   Computing the stress-free configuration is required since the geometry is imaged
   at end-of-diastole. The ``compute_stress_free_configuration()`` method runs a
   sequence of static simulations to estimate the stress-free state of the model and
   the initial stresses present. This step is computationally expensive and can take
   relatively long. You can consider reusing earlier runs by setting the ``overwrite``
   flag to ``False``. This reuses the results of the previous run.

.. GENERATED FROM PYTHON SOURCE LINES 165-167

Compute a conduction system
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 167-177

.. code-block:: Python


    # Compute the conduction system.
    simulator.compute_purkinje()

    # Use landmarks to compute the rest of the conduction system.
    simulator.compute_conduction_system()

    # Plot the computed conduction system.
    simulator.model.plot_purkinje()








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_ep-mechanics-simulator-fullheart_003.png
        :alt: ep mechanics simulator fullheart
        :srcset: /examples/simulator/images/sphx_glr_ep-mechanics-simulator-fullheart_003.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_ep-mechanics-simulator-fullheart_003.vtksz






.. GENERATED FROM PYTHON SOURCE LINES 178-181

Start the main simulation
~~~~~~~~~~~~~~~~~~~~~~~~~
Set the simulation end time and frequency of output files.

.. GENERATED FROM PYTHON SOURCE LINES 181-187

.. code-block:: Python

    simulator.settings.mechanics.analysis.end_time = Quantity(800, "ms")
    simulator.settings.mechanics.analysis.dt_d3plot = Quantity(10, "ms")

    # Save the model to a file.
    simulator.model.save_model(os.path.join(workdir, "heart_fib_beam.vtu"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ('C:\\Users\\ansys\\pyansys-heart\\downloads\\Rodero2021\\01\\FullHeart\\heart_fib_beam.vtu', 'C:\\Users\\ansys\\pyansys-heart\\downloads\\Rodero2021\\01\\FullHeart\\heart_fib_beam.partinfo.json')



.. GENERATED FROM PYTHON SOURCE LINES 188-191

.. note::
   A constant pressure is prescribed to the atria.
   No circulation system is coupled with the atria.

.. GENERATED FROM PYTHON SOURCE LINES 191-196

.. code-block:: Python


    # Start main simulation. The ``auto_post`` option is set to ``False`` to avoid
    # automatic postprocessing.
    simulator.simulate(auto_post=False)








.. GENERATED FROM PYTHON SOURCE LINES 197-202

.. note::
   The ``ReactionEikonal`` solver is suitable for coarse meshes and is
   included here for demonstration purposes. However, it currently supports
   only a single cardiac cycle. To simulate multiple cardiac cycles, use the
   ``Monodomain`` solver, which requires a fine mesh and small time step size.

.. GENERATED FROM PYTHON SOURCE LINES 204-206

Visualize and animate results LS-PrePost
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 208-214

.. only:: html

    .. video:: ../../_static/images/rodero_epmechanics_fullheart.mp4
      :width: 600
      :loop:
      :class: center


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (60 minutes 2.561 seconds)


.. _sphx_glr_download_examples_simulator_ep-mechanics-simulator-fullheart.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: ep-mechanics-simulator-fullheart.ipynb <ep-mechanics-simulator-fullheart.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: ep-mechanics-simulator-fullheart.py <ep-mechanics-simulator-fullheart.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: ep-mechanics-simulator-fullheart.zip <ep-mechanics-simulator-fullheart.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
